--- a/app/src/main/res/layout/activity_card_test.xml
+++ b/app/src/main/res/layout/activity_card_test.xml
@@ -2,27 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CardActivityTest">
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="50dp"
+        />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="216dp"
-        tools:layout_editor_absoluteY="96dp">
 
-
-        <ListView
-            android:id="@+id/cardList"
-            android:layout_width="412dp"
-            android:layout_height="675dp"
-            android:listSelector="#0f0" />
-    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
