--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -38,11 +38,9 @@
         android:layout_width="250dp"
         android:layout_height="400dp"
         android:adjustViewBounds="false"
-        android:backgroundTint="#000000"
         android:cropToPadding="false"
         android:onClick="imgBtnClick"
-        android:scaleX="0.8"
-        android:scaleY="0.9"
+        android:scaleType="fitCenter"
         app:layout_constrainedHeight="false"
         app:layout_constrainedWidth="false"
         app:layout_constraintBottom_toTopOf="@+id/playText"
@@ -50,8 +48,7 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-    />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/player"
