--- a/app/src/main/res/layout/activity_card_test_horizontal.xml
+++ b/app/src/main/res/layout/activity_card_test_horizontal.xml
@@ -6,12 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".CardTestHorizontal">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ImageButton
+        android:id="@+id/imageButton10"
+        android:layout_width="121dp"
+        android:layout_height="156dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/handView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/backofcard" />
+
+    <ImageView
+        android:id="@+id/discard"
+        android:layout_width="110dp"
+        android:layout_height="149dp"
+        android:layout_marginStart="27dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/handView"
+        app:layout_constraintStart_toEndOf="@+id/imageButton10"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/default_background" />
+
+    <HorizontalScrollView
+        android:id="@+id/handView"
+        android:layout_width="409dp"
+        android:layout_height="185dp"
+        android:layout_marginBottom="112dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:id="@+id/handlayout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
+    </HorizontalScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
