--- a/app/src/main/res/layout/activity_card_test_horizontal.xml
+++ b/app/src/main/res/layout/activity_card_test_horizontal.xml
@@ -12,6 +12,7 @@
         android:layout_height="156dp"
         android:layout_marginStart="76dp"
         android:layout_marginBottom="8dp"
+        android:onClick="draw"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/handView"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,5 +45,17 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"></LinearLayout>
     </HorizontalScrollView>
+
+    <TextView
+        android:id="@+id/playerNum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="173dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="181dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
