--- a/app/src/main/res/layout/activity_card_test_horizontal.xml
+++ b/app/src/main/res/layout/activity_card_test_horizontal.xml
@@ -27,8 +27,7 @@
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/handView"
         app:layout_constraintStart_toEndOf="@+id/imageButton10"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/default_background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <HorizontalScrollView
         android:id="@+id/handView"
