--- a/app/src/main/res/layout/activity_middle_screen.xml
+++ b/app/src/main/res/layout/activity_middle_screen.xml
@@ -6,36 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".MiddleScreen">
 
-    <TextView
-        android:id="@+id/currentPlayer"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="174dp"
-        android:layout_marginTop="292dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginBottom="420dp"
-        android:autoText="false"
-        android:gravity="center"
-        android:text="Player"
-        android:textColor="@android:color/background_dark"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
-        android:layout_marginTop="187dp"
         android:layout_marginEnd="161dp"
         android:layout_marginBottom="184dp"
         android:onClick="btnClick"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentPlayer" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
