added mid screen and player cards (going to finish help menu)

--- a/app/src/main/res/layout/activity_card_test_horizontal.xml
+++ b/app/src/main/res/layout/activity_card_test_horizontal.xml
@@ -61,4 +61,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="playerCards"
+        android:text="Player Cards"
+        app:layout_constraintBottom_toTopOf="@+id/handView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton10" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
