help screen added to the play

--- a/app/src/main/res/layout/activity_card_test_horizontal.xml
+++ b/app/src/main/res/layout/activity_card_test_horizontal.xml
@@ -72,4 +72,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton10" />
 
+    <Button
+        android:id="@+id/help"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="help"
+        android:text="Help"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/handView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
