--- a/app/src/main/res/layout/activity_card_test_horizontal.xml
+++ b/app/src/main/res/layout/activity_card_test_horizontal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CardTestHorizontal">
+    tools:context=".Card">
 
     <ImageButton
         android:id="@+id/imageButton10"
@@ -49,15 +49,11 @@
         android:id="@+id/playerNum"
         android:layout_width="400dp"
         android:layout_height="100dp"
-        android:layout_marginStart="173dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="181dp"
         android:gravity="center"
         android:text="TextView"
         android:textColor="@color/black"
-        android:textSize="90sp"
+        android:textSize="75sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
